--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <start-class>guru.springframework.sfgpetclinic.SfgPetClinicApplication</start-class>
+        <!--<start-class>guru.springframework.guru.springframework.sfgpetclinic.SfgPetClinicApplication</start-class>-->
     </properties>
 
     <dependencies>
